scss/widgets/embedded-posts.scss
.embedded-posts-container {
  background: #d8d8d8;
  border: 0.0625rem solid #979797;
  padding: $spacer;
  margin: 0 (-$grid-gutter-width / 2);
}

.dc-embedded-post {
  @include make-container;
  padding-top: $spacer;
  padding-bottom: $spacer;
  background: #fbfbfb;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);

  & + & {
    margin-top: $spacer;
  }
}

section.embedded-posts.top.topic-body.offset2:not(.dc-component) {
  display: none;
}

.embedded-posts.bottom,
.embedded-posts.top {
  .row {
    padding-bottom: 0;

    .topic-avatar,
    .topic-body {
      border: none;
    }
  }
}

.embedded-posts.embedded-posts {
  border: 0;
  margin: 0;
  max-width: 100%;
  padding: 0;
  width: auto;

  .topic-body {
    @include make-col-ready;
    @include make-col(12);

    @include media-breakpoint-up(lg) {
      // Avatar pictures are being rendered and take one column
      @include make-col(11);
    }

    padding-top: 0;

    > * {
      padding: 0;
    }
  }
}

